# project(testing VERSION 0.1 LANGUAGES CXX)

# find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Widgets )
# find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Widgets REQUIRED)

# add_library(testing SHARED
# test.cpp)

# target_link_libraries(testing PRIVATE
#     Qt6::Core
#     Qt6::Widgets
# )
# target_include_directories(testing PUBLIC googletest)
# target_include_directories(testing PUBLIC googlemock)
# target_link_libraries(testing PRIVATE gtest)
# target_link_libraries(testing PRIVATE gmock)
# target_include_directories(testing PUBLIC dataProvider)
# target_link_libraries(testing PRIVATE dataProvider)
